--- a/android/src/main/res/values-zh/strings.xml
+++ b/android/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">照片编辑器</string>
+  <string name="app_name">中越之家</string>
   <string name="label_brush">画笔</string>
   <string name="label_shape">形状</string>
   <string name="label_oval">椭圆形</string>
@@ -18,6 +18,11 @@
   <string name="msg_share_image">分享图片</string>
   <string name="save_error">保存失败。请重试！</string>
   <string name="done">完成</string>
+  <string name="saving">保存</string>
+  <string name="label_opacity">不透明度</string>
+  <string name="cancel">取消</string>
+  <string name="save">保存</string>
+  <string name="discard">取消</string>
 
   <string-array name="photo_editor_emoji">
 
